src/sass/app.scss
/* Copyright (c) 2017, Alexander Rose Charity (reg. in England and Wales, #00279157) */
@import 'vars';

$fa-font-path:"../node_modules/font-awesome/fonts";
@import "../node_modules/font-awesome/scss/font-awesome";
.icon-user {
  @extend .fa;
  @extend .fa-user;
}

.fa {
  font-size: 2em;
  padding-bottom: 8px;
}

html,
body {
  height: 100%;
}

html {
  font-size: 16px;
  font-family: $arc_main_font;
}

body {
  background-color: $arc_white;
  color: $arc_copy;
  margin: 0;
}

#app {
  position: relative;
  background-color: $arc_bg;
  margin: 0 auto;
  height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $arc_headings;
}

h1 {
  font-size: 1.5em;
}

p {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

ul {
  padding-left: 0;
  display: block;
  position: relative;
}

nav {
  text-align: center;
  font-size: 1em;
  a {
    text-decoration: none;
    color: $arc_copy;
  }
  ul {
    display: flex;
    margin: 0 auto;
    padding: 1em;
  }
  li {
    display: inline-block;
    flex: 1;
    padding: 0.8em;
    &:hover,
    &:focus {
      animation: pulse 0.5s linear 1;
      background: transparent;
    }
  }
  &.input-tab {
    background-color: $arc_bg;
    .fa {
      padding-bottom: 0;
    }
    a {
      color: $arc_copy;
      font-weight: bold;
      padding: 1.5em;
      &.router-link-exact-active.router-link-active {
        color: $arc_rose;
      }
    }
    ul {
      justify-content: flex-end;
      padding: 0 1.5em;
    }
    li {
      padding: 0;
    }
  }
}

section {
  margin-top: 3em;
}

.hidden {
  visibility: hidden;
}

.router-link-exact-active.router-link-active {
  color: $arc_rose;
}

input {
  font-family: $arc_headings;
  margin-bottom: 0.8em;
  border: 2px solid $arc_dark_border;
  border-radius: 3px;
  &[type=text],
  &[type=password],
  &[type=tel] {
    min-height: 48px;
    font-size: 1.5em;
    line-height: 20px;
    padding: 0 10px;
    width: calc(100% - 23px);
  }
  &:focus {
    border: 2px solid $arc_focus;
    outline: none;
  }
}

label {
    margin-bottom: 10px;
    display: block;
    text-align: left;
}

#textVoucher label {
  margin-bottom: 0;
}

button {
  background-color: $arc_rose;
  color: $arc_white;
  font-size: 1rem;
  display: block;
  text-align: center;
  height: 48px;
  font-weight: bold;
  border: 0;
  border-radius: 3px;
  margin: 2em auto;
  padding: 0 3em;
  box-shadow: 0 3px 12px -1px rgba(0, 0, 0, 0.2);
}

header {
  background-color: $arc_white;
  z-index: 1;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: space-between;
}

.logo {
  img {
    padding: 2em 0 1.3em 2em;
    width: 50%;
  }
  &.login {
    margin: 0 auto;
    img {
      margin: 0 auto;
      padding: 2em;
      display: flex;
    }
  }
}

.container {
  position: absolute;
  background-color: $arc_bg;
  margin: 0 auto;
  padding: 2em;
  overflow: auto;
  width: calc(100% - 4em);
}

.content {
  width: 50%;
  margin: 0 auto;
  &.fullwidth {
    width: 90%;
  }
  &.narrow {
    width: 40%;
    .two-buttons {
      width: 100%;
    }
  }
}

.counter {
  margin-top: 1.5em;
  span {
    font-weight: bold;
  }
}

.two-buttons {
  display: flex;
  width: 40%;
  flex: 1;
  padding: 0;
  margin: 1em auto;
  a {
    text-decoration: none;
  }
  button {
    padding: 0;
    margin: 1em auto;
    font-size: 0.9rem;
    width: 50%;
  }
  .left {
    margin-right: 0.5em;
    background-color: $arc_white;
    color: $arc_copy;
    &.cta {
      background-color: $arc_rose;
      color: $arc_white;
      width: 100%;
    }
  }
  .right {
    margin-left: 0.5em;
    &::after {
      font-family: FontAwesome;
      content: "\f0da";
      padding-left: 0.5em;
    }
  }
}

// styling for the div which contains both text fields for adding vouchers
.input-box {
  display: flex;
  border: 2px solid $arc_dark_border;
  border-radius: 3px;
  input {
    border: 0;
    margin-top: 0;
    margin-bottom: 0;
    text-align: center;
  }
}

#sponsorBox {
  justify-content: flex-start;
  background-color: $arc_bg;
  width: 30%;
}

#voucherBox {
  justify-content: flex-end;
  text-transform: uppercase;
  width: 70%;
}

#voucherNumber {
  width: 30%;
  margin-top: 0.5rem;
  margin-bottom: 0;
  text-align: center;
}

#registeredVouchers ul {
  padding-left: 1em;
}

.link {
  text-decoration: none;
  color: $arc_rose;
}

.form-group {
  padding-top: 1em;
  width: 100%;
  position: relative;
}

main > *:last-child {
  display: block;
}

@keyframes pulse {
  0% { transform: scale(1) }
  50% { transform: scale(1.2) }
  100% { transform: scale(1) }
}

main > *:target {
  display: block;
}

main > *:target ~ * {
  display: none;
}

.fade-enter-active, .fade-leave-active {
  transition-property: opacity;
  transition-duration: .25s;
}

.fade-enter-active {
  transition-delay: .25s;
}

.fade-enter, .fade-leave-active {
  opacity: 0
}

// Accordion and voucher list styling
.accordion,
.voucher-list {
  //box-shadow: 0 3px 12px -1px rgba(0, 0, 0, 0.2);
  font-size: 1.2em;
  label {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    margin-bottom: 0;
    position: relative;
    display: block;
    padding: 0.5em 1.5em;
    line-height: 3;
    cursor: pointer;
    /* Icon */
    &::before {
      position: absolute;
      left: 0;
      top: 0;
      display: block;
      width: 3em;
      height: 4em;
      line-height: 4;
      text-align: center;
      transition: all .35s;
    }
  }
  input {
    position: absolute;
    opacity: 0;
    z-index: -1;
    &:checked ~ .tab-content {
      max-height: none;
      background-color: $arc_row;
    }
    &:checked ~ label {
      background-color: $arc_rose;
      color: $arc-white;
    }
    &[type=checkbox] + label::before {
      font-weight: bold;
      font-family: FontAwesome;
      content: "\f0da";
      color: $arc_rose;
    }
    &[type=checkbox]:checked + label::before {
      transform: rotate(450deg);
      color: $arc_white;
    }
  }
}

.tab {
  position: relative;
  border-top: 1px solid $arc_border;
  width: 100%;
  overflow: hidden;
  &.thead {
    background-color: white;
    border: 0;
  }
  &.row {
    background-color: white;
  }
  .row {
    display: flex;
    div {
      &.total::before {
        content: "Voucher total";
      }
      &:nth-child(1) {
        width: 30%;
        text-align: left;
        padding-left: 2em;
      }
      &:nth-child(2) {
        width: 40%;
        text-align: right;
      }
      &:nth-child(3) {
        width: 30%;
        text-align: right;
      }
    }
  }
  .amount {
    font-weight: bold;
  }
}

.row-code {
  display: flex;
  border-bottom: 1px solid $arc_border;
  margin: 0 auto;
  width: 70%;
  &:last-child {
    border-bottom: none;
  }
  div {
    &:nth-child(1) {
      width: 50%;
      text-align: center;
    }
    &:nth-child(2) {
      width: 50%;
      text-align: center;
    }
  }
}

.tab-content {
  max-height: 0;
  transition: max-height .35s;
  p {
    margin: 1em;
  }
  .inner-thead {
    font-weight: bold;
  }
}

.voucher-list .row-code {
  display: flex;
  width: 100%;
  div {
    &:nth-child(1) {
      width: 50%;
      text-align: left;
    }
    &:nth-child(2) {
      width: 50%;
      text-align: right;
    }
  }
}

// A lot of css for some user friendly radio buttons/checkboxes
.multiple-choice {
  display: block;
  float: none;
  clear: left;
  position: relative;
  padding: 0 0 0 38px;
  margin-bottom: 1.5em;
  input {
    position: absolute;
    cursor: pointer;
    left: 0;
    top: 0;
    width: 38px;
    height: 38px;
    z-index: 1;
    margin: 0;
    zoom: 1;
    filter: alpha(opacity=0);
    opacity: 0;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    &[type=radio] + label::before {
      content: "";
      border: 2px solid;
      background: $arc_white;
      width: 34px;
      height: 34px;
      position: absolute;
      top: 0;
      left: 0;
      border-radius: 50%;
    }
    &[type=radio] + label::after {
      content: "";
      border: 10px solid;
      width: 0;
      height: 0;
      position: absolute;
      top: 9px;
      left: 9px;
      border-radius: 50%;
      zoom: 1;
      filter: alpha(opacity=0);
      opacity: 0;
    }
    &[type=radio]:focus + label::before {
      box-shadow: 0 0 0 4px $arc_focus;
    }
    &:checked + label::after {
      zoom: 1;
      filter: alpha(opacity=100);
      opacity: 1;
    }
    &:disabled + label {
      zoom: 1;
      filter: alpha(opacity=50);
      opacity: 0.5;
    }
  }
  label {
    cursor: pointer;
    padding: 8px 10px 9px 12px;
    display: block;
    touch-action: manipulation;
  }
}

// Media queries
@media (max-width: 768px) {
  body {
    background-color: $arc_bg;
  }

  nav {
    position: relative;
    margin: 0 auto;
    margin-right: 0;
    &.input-tab {
      background-color: $arc_rose;
      a {
        color: $arc_faded;
        font-weight: bold;
        flex: 1;
        padding: 1em;
        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
        &:focus,
        &:hover,
        &.router-link-exact-active.router-link-active {
          color: $arc_white;
        }
      }
      ul {
        justify-content: center;
        padding: 0;
      }
    }
  }

  header {
    z-index: 1;
  }

  .logo img,
  .logo.login img {
    width: 216px;
  }

  .fullwidth {
    padding: 1em 0 2em 0;
    width: 100%;
  }

  button {
    width: 100%;
    margin: 2em auto;
  }

  .content {
    width: 90%;
    &.narrow,
    &.narrow button {
      width: 100%;
    }
  }
}

@media (max-width: 580px) {
  .logo img {
    width: 75%;
  }
}

@media (max-width: 500px) {
  .fa {
    font-size: 1.5em;
  }

  .logo {
    img {
      padding: 1.3em 0 1em 1.3em;
    }
  }

  nav {
    font-size: 0.8em;
    ul {
      padding: 0.3em;
    }
  }

  .content {
    &.fullwidth {
      width: 100%;
      h1 {
        font-size: 1.4em;
        padding: 0 1.5rem;
      }
      p,
      section {
        padding: 0 1.5rem;
        h1 {
          padding-left: 0;
        }
      }
      .two-buttons {
        width: 92%;
      }
    }
  }

  .accordion,
  .voucher-list {
    font-size: 1em;
    label {
      padding: 0.5em 0;
    }
    .tab {
      .row {
        div {
          &.total::before {
            content: "Total";
          }
          &:nth-child(1) {
            flex: 1;
            width: initial;
            text-align: left;
            padding-left: 3em;
          }
          &:nth-child(2) {
            flex: 1;
            width: initial;
            text-align: right;
          }
          &:nth-child(3) {
            flex: 1;
            width: initial;
            text-align: right;
            padding-right: 1em;
          }
        }
      }
    }
  }
  .voucher-list {
    .row-code {
      width: 100%;
      div {
        &:nth-child(1) {
          padding-left: 1.5em;
          width: 40%;
        }
        &:nth-child(2) {
          padding-right: 1em;
          width: 60%;
        }
      }
    }
  }
}

